<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/dialog_top_background_img"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background_img"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/describe"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_input_bg_img"
            android:ems="10"
            android:lines="7"
            android:gravity="top|left"
            android:textColor="#7b7b7b"
            android:textSize="15sp" >
        </TextView>

        <CheckBox
            android:id="@+id/isNotShowAgain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:button="@drawable/list_item_select_one_cb_click"
            android:paddingBottom="8dip"
            android:paddingTop="8dip"
            android:text="不再提示"
            android:textColor="#505050"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dip" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/updateCancle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/dialog_button_bg"
                    android:text="@string/update_no"
                    android:textColor="#505050"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/doUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/dialog_button_bg"
                    android:text="@string/update_yes"
                    android:textColor="#505050"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>